[package]
name = "rdma-dashboard-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
itertools = "0.14.0"
ratatui = { version = "0.29.0", features = ["crossterm"] }
regex = "1.10"
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# For lazy static initialization of Regex
[dependencies.once_cell]
version = "1.19"
